--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a href="#">Servicio</a>
 
             <button class="btn">Iniciar Sesión</button>
-            <button class="btn" id="verCarrito"><i class="fa-solid fa-cart-shopping"></i></button>
+            <button class="btn" id="verCarrito"><i class="fa-solid fa-cart-shopping"></i><span id="cantidadCarrito" class="cantidad-carrito"></span></button>
         </nav>
     </header>
 <!-- INICIO DE SESION -->
@@ -88,7 +88,6 @@
     <!-- Modal Container -->
     <div id="modal-container" class="modal-container"></div>
     <!-- SCRIPT DE JS -->
-    <script src="/js/main.js"></script>
     <script src="/js/product.js"></script>
     <script src="/js/tienda.js"></script>
     <!-- FAVICON SCRIPT -->
